@@ -1,3 +1,9 @@
+2005-12-28  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* sid-cpu.scm (-gen-hw-stream-and-destream-fns): Stringize mode
+	for concatenation.
+	(-hw-gen-write-stack-decl): Likewise.
+
 2005-12-05  Hans-Peter Nilsson  <hp@axis.com>
 
 	* utils-sim.scm (-gen-decode-insn-entry): Correct last change for
